--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -4,16 +4,25 @@
   <div>
     <%= form.label :title %><br>
     <%= form.text_field :title %>
+    <% @book.errors.full_messages_for(:title).each do |message| %>
+     <div><%= message %></div>
+    <% end %>
   </div>
 
   <div>
     <%= form.label :pages %><br>
     <%= form.text_field :pages %>
+    <% @book.errors.full_messages_for(:pages).each do |message| %>
+    <div><%= message %></div>
+    <% end %>
   </div>
 
   <div>
     <%= form.label :description %><br>
     <%= form.text_area :description %>
+    <% @book.errors.full_messages_for(:description).each do |message| %>
+    <div><%= message %></div>
+    <% end %>
   </div>
 
   <div>
