--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -12,3 +12,32 @@
                     turbo_confirm: "Are you sure?"
                   } %></li>
 </ul>
+
+<h2>Buying Customer</h2>
+<% @book.customers.each do |customer| %>
+  <p>
+    <strong>Customer:</strong>
+    <%= customer.name %>
+  </p>
+
+  <p>
+    <strong>age:</strong>
+    <%= customer.age %>
+  </p>
+<% end %>
+
+
+<h2>Buy the book:</h2>
+<%= form_with model: [ @book, @book.customers.build ] do |form| %>
+  <p>
+    <%= form.label :name %><br>
+    <%= form.text_field :name %>
+  </p>
+  <p>
+    <%= form.label :age %><br>
+    <%= form.text_area :age %>
+  </p>
+  <p>
+    <%= form.submit %>
+  </p>
+<% end %>
