--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -23,6 +23,14 @@
     <% end %>
   </div>
 
+    <div>
+    <%= form.label :wish %><br>
+    <%= form.text_area :wish %>
+    <% @book.errors.full_messages_for(:wish).each do |message| %>
+    <div><%= message %></div>
+    <% end %>
+  </div>
+
   <div>
     <%= form.submit %>
   </div>
