--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,6 +5,8 @@
 
 <h5>  <%= @book.pages %> </h5>
 
+<h5>  <%= @book.wish %> </h5>
+
 <ul>
   <li><%= link_to "Edit", edit_book_path(@book) %></li>
   <li><%= link_to "Destroy", book_path(@book), data: {
