--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -7,6 +7,11 @@
     <%= form.label :age %><br>
     <%= form.text_area :age %>
   </p>
+
+  <p>
+    <%= form.label :wish %><br>
+    <%= form.text_area :wish %>
+  </p>
   <p>
     <%= form.submit %>
   </p>
