--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,8 @@
 <h1>Books#index</h1>
 <p>Find me in app/views/books/index.html.erb</p>
 
+Our Book has <%= Book.public_count %> books and counting!
+
 <ul>
   <% @books.each do |book| %>
      <% if book.wish? %>
