--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -16,6 +16,7 @@
 </ul>
 
 <h2>Buying Customer</h2>
+Our App has <%= Customer.public_count %> customers and counting!
 <%= render @book.customers %>
 
 <h2>Buy the book:</h2>
