--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -10,7 +10,7 @@
 
   <p>
     <%= form.label :wish %><br>
-    <%= form.text_area :wish %>
+     <%= form.select :wish, Visible::VALID_WISHES, selected: 'eager' %>
   </p>
   <p>
     <%= form.submit %>
