delete with dependency ok now

--- a/app/views/customers/_customer.html.erb
+++ b/app/views/customers/_customer.html.erb
@@ -12,3 +12,10 @@
   <strong>Wish:</strong>
   <%= customer.wish %>
 </p>
+
+  <p>
+    <%= link_to "Destroy Customer", [customer.book, customer], data: {
+                  turbo_method: :delete,
+                  turbo_confirm: "Are you sure?"
+                } %>
+  </p>
