--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,12 @@
 <h1>Books#index</h1>
 <p>Find me in app/views/books/index.html.erb</p>
 
+<%= form_with(url: books_path, method: :get, local: true) do %>
+  <%= label_tag(:query, "Search for:") %>
+  <%= text_field_tag(:query) %>
+  <%= submit_tag("Search") %>
+<% end %>
+
 Our Book has <%= Book.public_count %> books and counting!
 
 <ul>
